--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "predis/predis": "^2.1"
+        "predis/predis": "^2.1",
+        "symfony/http-client": "^6.2",
+        "symfony/mailgun-mailer": "^6.2"
     },
     "require-dev": {
         "laravel/breeze": "^1.18",
