--- a/apache_app.conf
+++ b/apache_app.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerName calvinhill.com
-    Redirect permanent / https://www.calvinhill.com/
+    Redirect permanent / htt://www.calvinhill.com/
 </VirtualHost>
 
 
