--- a/apache_app.conf
+++ b/apache_app.conf
@@ -1,10 +1,3 @@
-<VirtualHost *:80>
-    ServerName calvinhill.com
-    Redirect permanent / htt://www.calvinhill.com/
-</VirtualHost>
-
-
-<VirtualHost *:443>
-    ServerName calvinhill.com
-    Redirect permanent / https://www.calvinhill.com/
-</VirtualHost>
+RewriteEngine On
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule ^(.*)$ http://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
