trying vhost error again

--- a/apache_app.conf
+++ b/apache_app.conf
@@ -1,3 +1,10 @@
-RewriteEngine On
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ https://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+<VirtualHost *:80>
+    ServerName calvinhill.com
+    Redirect permanent / http://www.calvinhill.com/
+</VirtualHost>
+
+
+<VirtualHost *:443>
+    ServerName calvinhill.com
+    Redirect permanent / https://www.calvinhill.com/
+</VirtualHost>
