--- a/apache_app.conf
+++ b/apache_app.conf
@@ -1,2 +1,8 @@
-ServerName calvinhill.com
-Redirect permanent / https://www.calvinhill.com/
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName calvinhill.com
+    Redirect permanent / https://www.calvinhill.com/
+</VirtualHost>
+
+<VirtualHost>
