--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^ %{REQUEST_SCHEME:X-FORWARDED-FOR}://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTP_HOST:X-FORWARDED-FOR} !^www\. [NC]
+RewriteRule ^ %{REQUEST_SCHEME:X-FORWARDED-FOR}://www.%{HTTP_HOST:X-FORWARDED-FOR}%{REQUEST_URI:X-FORWARDED-FOR} [R=301,L]
