--- a/apache_app.conf
+++ b/apache_app.conf
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST:X-Forwarded-Proto} !^www\. [NC]
+RewriteCond %{HTTP_HOST} !^www\. [NC]
 RewriteRule (.*) https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
