--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,7 +20,8 @@
     RewriteRule ^ index.php [L]
 </IfModule>
 
-Header add Access-Control-Allow-Origin "*.calvinhill.com"
+Header add Access-Control-Allow-Origin "https://www.calvinhill.com"
+Header add Access-Control-Allow-Origin "https://calvinhill.com"
 Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
 Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
