--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
         "predis/predis": "^2.1",
+        "spatie/laravel-sitemap": "^6.3",
         "symfony/http-client": "^6.2",
         "symfony/mailgun-mailer": "^6.2"
     },
